fix minwidth and horizontal bar spacing

--- a/app/theme/instructions.scss
+++ b/app/theme/instructions.scss
@@ -45,7 +45,7 @@
   color: #FFF;
   line-height: 2em;
   position: absolute;
-  left: 2em;
+  bottom: -2em;
   margin: 0;
   height: 4em;
   width: 4em;
