--- a/app/theme/stepper.scss
+++ b/app/theme/stepper.scss
@@ -96,7 +96,7 @@
   display: block;
   margin: 0 auto;
   margin-top: 2rem;
-  width: 75%;
+  width: 76%;
   border-top: 2px solid $palette-border;
   h2 {
     margin-top: 23px;
@@ -107,5 +107,5 @@
   position: relative;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
